--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
     <span class="lyphicon-chevron-left carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="right carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+  <button class="right carousel-control-next carousel-control" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="lyphicon-chevron-right carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
