--- a/main.html
+++ b/main.html
@@ -33,11 +33,11 @@
     </div>
   </div>
   <button class="left carousel-control-prev carousel-control" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="glyphicon-chevron-left carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="glyphicon glyphicon-chevron-left carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
   <button class="right carousel-control-next carousel-control" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="glyphicon-chevron-right carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="glyphicon glyphicon-chevron-right carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
